Fix problems with padding on mobile

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -134,8 +134,8 @@ div.post-footer {
 
     nav.nav {
         padding-top: 10px;
-        padding-left: 10px;
-        margin-bottom: 10px;
+        padding-left: 5px;
+        margin-bottom: 0px;
     }
 
     article.post-entry:first-of-type {
@@ -193,6 +193,9 @@ div.post-footer {
     }
 
     nav.nav {
+        padding-top: 40px;
+        padding-left: 0px;
+        padding-right: 0px;
         margin-bottom: 70px
     }
 
@@ -223,6 +226,9 @@ div.post-footer {
     }
 
     nav.nav {
+        padding-top: 40px;
+        padding-left: 0px;
+        padding-right: 0px;
         margin-bottom: 70px
     }
 
@@ -253,6 +259,9 @@ div.post-footer {
     }
 
     nav.nav {
+        padding-top: 40px;
+        padding-left: 0px;
+        padding-right: 0px;
         margin-bottom: 70px
     }
 
